--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Height/Width & color parameters are all from figma/pixso */
-/*If figma div width is 1920 but my device size is 1280, then calculate (1280/1920)*100=66.67%, again 1280*0.667=853.76  */
+/*Ex: If figma div width is 1920 but my device size is 1280, then calculate (1280/1920)*100=66.67%, again 1280*0.667=853.76px  */
 /*If figma width smaller than my device width, then no need to calculate width */
 
 
@@ -19,11 +19,11 @@
     align-items: center;
 }
 
-
-/*hero-content width is 1023, my browser is 1920, so 53.28%, again 0.5328*1023=545px should be the width */
+/*Since Main div width is same as my device width no need to calculate hero-content width */
+/*hero-content width in figma is given 1023px*/
 
 #hero .hero_content {
-    width: 545px;
+    width: 1023px;
 
     /* margin-left: auto;
     margin-right: auto; */
