--- a/styles/style.css
+++ b/styles/style.css
@@ -7,25 +7,63 @@
 
 
 #hero {
-    background-color: tomato;
-    background-image: url("../assets/hero-bg.png");
-    height: 919px;
+    /*Main Hero section gradient, Below 5 lines of code must be on Top*/
+    background: linear-gradient(
+        0deg, 
+        rgb(9, 9, 9) 3.482%,
+        rgba(16, 16, 16, 0) 101.632%
+    ),
+    url("../assets/hero-bg.png");
+
     background-size: cover;
-    /* background-repeat: no-repeat; */
+    background-repeat: no-repeat;
     background-position: center;
+
+
+    /* width: auto; */
+    height: 919px;
+
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/*Since Main div width is same as my device width no need to calculate hero-content width */
+
 /*hero-content width in figma is given 1023px*/
 
 #hero .hero_content {
-    width: 1023px;
+    width: 53.3%;         /* 1023/1920=0.533 */
+}
 
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* margin: 0 auto; */
+#hero .hero_content .subtitle{
+    opacity: 0.8;
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 38px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+#hero .hero_content .title_01 {
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 80px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+#hero .hero_content .description_01 {
+    opacity: 0.7;
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
 }
