--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,29 @@
 /*Ex: If figma div width is 1920 but my device size is 1280, then calculate (1280/1920)*100=66.67%, again 1280*0.667=853.76px  */
 /*If figma width smaller than my device width, then no need to calculate width */
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.btn_container{
+    text-align: center;   /*since button is Just Text and an inline element*/
+    margin: 32px 0px;
+}
+.btn_style {
+    padding: 21px 32px 21px 32px;
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+
+    border-radius: 8px;
+    border: none;
+    background: rgb(82, 195, 3);
+}
 
 
 #hero {
@@ -27,10 +50,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    /* gap: 20px; */
 }
 
 
-/*hero-content width in figma is given 1023px*/
+/*hero-content div width in figma is given 1023px*/
 
 #hero .hero_content {
     width: 53.3%;         /* 1023/1920=0.533 */
@@ -45,6 +70,7 @@
     line-height: 38px;
     letter-spacing: 0%;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 #hero .hero_content .title_01 {
