--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,8 @@
     border-radius: 8px;
     border: none;
     background: rgb(82, 195, 3);
+
+    cursor: pointer;
 }
 
 
@@ -95,3 +97,57 @@
     margin-bottom: 32px;
 }
 
+
+#card_boxes_container {
+    width: 68.8%;
+    margin: 130px auto;       
+}
+
+#card_boxes_container .subtitle_02{
+    opacity: 0.6;
+    color: rgb(16, 16, 16);
+    font-family: Work Sans;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+#card_boxes_container .title_02 {
+    color: rgb(16, 16, 16);
+    font-family: Work Sans;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 64px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.card_container {
+    margin-top: 48px;
+    margin-bottom: 85px;
+    display: flex;
+    justify-content: space-between;
+    font-family: Work Sans;
+}
+.card {
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    /* justify-content: center; */
+    align-items: center;
+}
+/* .card .image-box {
+    width: 300px;
+}
+.card .image-box .img {
+    width: 100%;
+} */
+.card .shop {
+    background-color: (82, 195, 3, 0.15);
+    padding: 14px 32px 14px 32px;
+    border-radius: 8px;
+    background: rgba(82, 195, 3, 0.15);
+}
